Fixes wrong positioning of breadcrumb parents

--- a/src/themes/default/scss/fsLayoutLeft/_fsCrumb.scss
+++ b/src/themes/default/scss/fsLayoutLeft/_fsCrumb.scss
@@ -30,8 +30,8 @@
       display: none !important;
       color: $colorMediumGrey;
       width: auto;
-      height: 17px;
-      line-height: 17px;
+      height: 22px;
+      line-height: 22px;
       font-size: $fontSizeParagraph;
       font-weight: $fontWeightParagraph;
       letter-spacing: 0.3px;
